--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,13 +3,12 @@ name: Publish
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   publish:
     # To enable auto publishing to github, update your electron publisher
     # config in package.json > "build" and remove the conditional below
-    if: ${{ github.repository_owner == 'electron-react-boilerplate' }}
 
     runs-on: ${{ matrix.os }}
 
