--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "start:main": "cross-env NODE_ENV=development electronmon -r ts-node/register/transpile-only .",
     "start:preload": "cross-env NODE_ENV=development TS_NODE_TRANSPILE_ONLY=true webpack --config ./.erb/configs/webpack.config.preload.dev.ts",
     "start:renderer": "cross-env NODE_ENV=development TS_NODE_TRANSPILE_ONLY=true webpack serve --config ./.erb/configs/webpack.config.renderer.dev.ts",
-    "test": "jest"
+    "test": "jest",
+    "package-ci": "yarn postinstall && yarn build && electron-builder --ia32 --publish always",
+    "package-win32": "yarn build && electron-builder build --win --ia32"
   },
   "browserslist": [],
   "jest": {
