--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "delivery-printer",
-  "description": "A foundation for scalable desktop apps",
+  "name": "sgrande-delivery-printer-2",
   "version": "2.0.0",
   "engines": {
     "node": "16.x"
@@ -151,7 +150,7 @@
     "webpack-merge": "^5.8.0"
   },
   "build": {
-    "productName": "SGrande Delivery Printer",
+    "productName": "SGrande-Delivery-Printer",
     "appId": "com.sgrande.delivery",
     "asar": true,
     "asarUnpack": "**\\*.{node,dll}",
