chore: set author

--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "sgrande-delivery-printer-2",
   "version": "2.0.0",
+  "description": "SGrande Delivery Printer 2 - Impressão automática dos pedidos",
+  "author": {
+    "name": "SGrande Delivery",
+    "email": "contato@sgrande.delivery"
+  },
   "engines": {
     "node": "16.x"
   },
