--- a/release/app/package.json
+++ b/release/app/package.json
@@ -1,9 +1,13 @@
 {
   "name": "sgrande-delivery-printer-2",
   "version": "2.0.0",
-  "description": "A foundation for scalable desktop apps",
+  "description": "SGrande Delivery Printer 2 - Impressão automática dos pedidos",
   "license": "MIT",
   "main": "./dist/main/main.js",
+  "author": {
+    "name": "SGrande Delivery",
+    "email": "contato@sgrande.delivery"
+  },
   "scripts": {
     "rebuild": "node -r ts-node/register ../../.erb/scripts/electron-rebuild.js",
     "postinstall": "npm run rebuild && npm run link-modules",
