--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "sgrande-delivery-printer-2",
-  "version": "2.0.8",
+  "version": "2.1.0",
   "description": "SGrande Delivery Printer 2 - Impressão automática dos pedidos",
   "author": {
     "name": "SGrande Delivery",
     "email": "contato@sgrande.delivery"
   },
   "engines": {
-    "node": "18.x"
+    "node": ">=16.x"
   },
   "repository": {
     "type": "git",
